fix nav menu in header on small screen, fix top & left padding in features in small screen

--- a/src/styles/_features.scss
+++ b/src/styles/_features.scss
@@ -27,7 +27,7 @@
 @media (max-width: $small-screen-breakpoint) {
   .features {
     margin: 50px 0 ;
-    padding: 70px;
+    padding: 100px 70px 70px 100px;
   }
 
   .features__image {
