--- a/src/styles/_message.scss
+++ b/src/styles/_message.scss
@@ -36,7 +36,7 @@
     &__email,
     &__name,
     &__message {
-      width: 350px;
+      width: 300px;
     }
   }
 }
