--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -1,26 +1,19 @@
 @import "_vars";
 
 .nav {
-  margin-left: 7%;
+  margin-left: 78px;
   width: 100%;
 
   &__list {
     max-width: 1100px;
     display: flex;
-    flex-wrap: wrap;
     margin: 0;
-    justify-content: space-between;
     list-style: none;
   }
 
   &__item {
     position: relative;
-    margin-right: 6%;
-  }
-
-  &__item-action {
-    margin-right: 0;
-    margin-left: auto;
+    margin-right: 4%;
   }
 
   &__item:hover::after,
@@ -40,10 +33,18 @@
   .nav {
     flex-direction: column;
     justify-content: center;
-    margin-top: 20px;
+    margin: 20px auto 0;
+
+    &__list {
+      max-width: 150px;
+      flex-direction: column;
+      justify-content: center;
+      margin: auto;
+    }
 
     &__item {
       margin: 0;
+      text-align: center;
     }
   }
 }
